# pumped-up-kick-vst

./: .gitignore  CMakeLists.txt  README.md  README_zh-CN.md
.github/: INSTALL-macOS.txt  RELEASE_NOTES.md  check-macos-binary.sh
.github/workflows/: ci.yml  release.yml
src/: Curve.h  EnvelopeEditor.h  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h
src/font/: OFL.txt
